--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
 		"react-native": "0.45.1",
 		"react-native-deprecated-custom-components": "^0.1.0",
 		"react-native-linear-gradient": "^2.0.0",
+		"react-native-orientation": "^2.1.0",
 		"react-native-side-menu": "^0.20.3",
 		"react-native-swiper": "^1.5.4",
 		"react-native-tab-view": "^0.0.66",
-		"react-native-vector-icons": "^4.2.0"
+		"react-native-vector-icons": "^4.2.0",
+		"react-native-video": "^1.0.0",
+		"react-native-video-controls": "^1.2.1"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
